test/integration/bad/lang/bad_promotions3.stan
functions {
   void printer(array[] real x){
     print(x);
   }
}

model {
  array[3] int d = {1,2,3};
  printer({d,d});
}
